# react-native-bolo

./: .env.example  .gitignore  app.config.js  app.json  eas.json  global.css  package-lock.json  package.json  posthog-setup-report.md  skills-lock.json
.agents/skills/stream-flutter/: RULES.md  SKILL.md  builder.md  custom-ui.md  design-matching.md  sdk.md
.agents/skills/stream-flutter/references/: CHAT-ADVANCED-FLUTTER.md  (+15 more)
.agents/skills/stream-react/: RULES.md  SKILL.md  builder-ui.md  builder.md  enhance.md  migrate.md  sdk.md
.agents/skills/stream-react-native/: RULES.md  SKILL.md  credentials.md
.claude/skills/: stream-flutter  stream-react  stream-react-native
.claude/skills/integration-expo/: SKILL.md
prompts/: 03-onboarding-ui.md  05-clerk.md  19-explain-gen-file.md
src/app/: _layout.tsx  index.tsx  language-selection.tsx  onboarding.tsx
src/app/(auth)/: _layout.tsx  sign-in.tsx  sign-up.tsx
src/app/(tabs)/: _layout.tsx  ai-teacher.tsx  chat.tsx  home.tsx  learn.tsx  profile.tsx
src/components/: audio-lesson-call.tsx  auth-screen.tsx  custom-tab-bar.tsx  placeholder-screen.tsx  stream-video-provider.tsx
src/config/: posthog.ts
src/constants/: images.ts
src/data/: languages.ts  lessons.ts  units.ts
src/lib/: api.ts  persist-storage.ts  stream-server.ts
src/store/: language-store.ts  lesson-progress-store.ts  streak-store.ts
src/theme/: colors.ts  index.ts  typography.ts
src/types/: learning.ts
vision-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  pyproject.toml
vision-agent/prompts/: teacher.md
(+19 files in other folders)
