[project]
name = "duolingo-clone-vision-agent"
version = "0.1.0"
description = "Voice-only AI language teacher for the Duolingo clone teaching project."
requires-python = ">=3.10,<3.14"
dependencies = [
  "python-dotenv>=1.2.2",
  "vision-agents==0.6.6",
  "vision-agents-plugins-getstream==0.6.6",
  "vision-agents-plugins-openai==0.6.6",
]

[tool.vision-agents.agent]
entrypoint = "agent:runner"
